# Dat160_Semesterprosjekt

./: README.md
multi_robot_challenge_23/: package.xml  setup.py
multi_robot_challenge_23/Unused code/: robot_controller.py  robot_coordinator.py
multi_robot_challenge_23/launch/: aruco_recognition.launch.py  rescue_robots_w1.launch.py  spawn_robot.launch.py  start_nodes.launch.py
multi_robot_challenge_23/models_test/aruco0/: model.config  model.sdf
multi_robot_challenge_23/models_test/aruco0/materials/scripts/: aruco0.material
multi_robot_challenge_23/multi_robot_challenge_23/: aruco_node.py  bug2controller.py  coordinator.py  go_to_point.py  marker_recognition.py  robot_controller.py  robot_coordinator.py  wallfollower.py
