<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_challenge_23</name>
  <version>0.0.0</version>
  <description>Multi-robot challenge med Bug2 controller,GotoPoint, og WallFollower.</description>

  <maintainer email="todo@todo.todo">hvl</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps (Python nodes) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>bug2_interfaces</exec_depend>

  <!-- TF utils used by GoToPoint (import tf_transformations) -->
  <exec_depend>tf_transformations</exec_depend>

  <!-- Launch system (since you ship/bruker .launch.py) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Tests (behold gjerne disse) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
